--- a/index.html
+++ b/index.html
@@ -30,20 +30,32 @@
             <button class = "btn btn-primary" id = "start">START</button>
             <button class = "btn btn-secondary" style="display:none" id = "pause">PAUSE</button>
             <button class = "btn btn-danger" style="display:none" id = "stop">STOP</button>
-            <select class="form-control" id="units" style="margin-left: 50px">
+            <label style = "margin-left: 50px;margin-right: 10px" for="soundMenu"><strong style="font-size:20px">Display: </strong></label>
+            <select class="form-control" style="margin-right: 10px">
                 <option id="PlainText">Plain Text</option>
                 <option id="Bomb">Bomb</option>
             </select>
+            <label style = "margin-left: 10px;margin-right: 10px" for="soundMenu"><strong style="font-size:20px">Sound: </strong></label>
+            <select class="form-control" id="soundMenu">
+                <option id="Alarm">Alarm</option>
+                <option id="Explosion">Explosion</option>
+                <option id="Mute">Mute</option>
+            </select>
+            <small style = "margin-left: 10px">Code #<span id ="codeNumber"></span></small>
         </form>
         <div id="outJumbo"  style="display:none" class="jumbotron">
             <h1 style="text-align: center" id="output"></h1>
         </div>
     </div>
       
-    <canvas id="myCanvas" width="auto" height="auto" style="border:0px solid #d3d3d3;"></canvas>
+    <canvas id="myCanvas" width="auto" height="auto" style="display: none"></canvas>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+      <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+        <script>
+          firebase.initializeApp({apiKey: "AIzaSyBno6KcH__KrEwNnHoVh9gdZ1KTDR9NpO4",authDomain: "remotetimer.firebaseapp.com",databaseURL: "https://remotetimer.firebaseio.com",projectId: "remotetimer",storageBucket: "remotetimer.appspot.com",messagingSenderId: "312478965065"});
+        </script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
