--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     </div>
       
-    <canvas id="myCanvas" width="auto" height="auto" style="display: none"></canvas>
+    <canvas id="myCanvas" width="680" height="370px" style="display: none;"></canvas>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
